--- a/app/src/main/res/navigation/home_navigation.xml
+++ b/app/src/main/res/navigation/home_navigation.xml
@@ -8,5 +8,27 @@
         android:id="@+id/homeFragment"
         android:name="com.toni.mvvm__clean_code.ui.view.HomeFragment"
         android:label="home_fragment"
-        tools:layout="@layout/home_fragment" />
+        tools:layout="@layout/home_fragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_dateListFragment"
+            app:destination="@id/dateListFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/dateListFragment"
+        android:name="com.toni.mvvm__clean_code.ui.view.fragments.date_list_fragmet.DateListFragment"
+        android:label="date_list_fragment"
+        tools:layout="@layout/date_list_fragment" >
+        <action
+            android:id="@+id/action_dateListFragment_to_detailsArticleFragment"
+            app:destination="@id/detailsArticleFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailsArticleFragment"
+        android:name="com.toni.mvvm__clean_code.ui.view.fragments.details_article_fragment.DetailsArticleFragment"
+        android:label="details_article_fragment"
+        tools:layout="@layout/details_article_fragment" />
 </navigation>
