--- a/app/src/main/res/layout/date_list_fragment.xml
+++ b/app/src/main/res/layout/date_list_fragment.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.view.fragments.date_list_fragmet.DateListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/lv_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
