--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.view.HomeFragment">
+    tools:context=".ui.home.view.HomeFragment">
 
     <RelativeLayout
         app:layout_constraintBottom_toBottomOf="parent"
