--- a/app/src/main/res/navigation/home_navigation.xml
+++ b/app/src/main/res/navigation/home_navigation.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/homeFragment">
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.toni.mvvm__clean_code.ui.view.HomeFragment"
+        android:name="com.toni.mvvm__clean_code.ui.home.view.HomeFragment"
         android:label="home_fragment"
         tools:layout="@layout/home_fragment" >
         <action
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/dateListFragment"
-        android:name="com.toni.mvvm__clean_code.ui.view.fragments.date_list_fragmet.DateListFragment"
+        android:name="com.toni.mvvm__clean_code.ui.home.view.fragments.date_list.view.DateListFragment"
         android:label="date_list_fragment"
         tools:layout="@layout/date_list_fragment" >
         <action
@@ -28,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/detailsArticleFragment"
-        android:name="com.toni.mvvm__clean_code.ui.view.fragments.details_article_fragment.DetailsArticleFragment"
+        android:name="com.toni.mvvm__clean_code.ui.home.view.fragments.details_article.view.DetailsArticleFragment"
         android:label="details_article_fragment"
         tools:layout="@layout/details_article_fragment" />
 </navigation>
